# scipy-stubs

./: .coverage.md  .dprint.jsonc  .editorconfig  .gitignore  .lefthook.yml  .markdownlint.yaml  .mypyignore  .mypyignore-todo  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  coverage.md  justfile  lefthook.yml  pyproject.toml  tox.toml
.github/: copilot-instructions.md  dependabot.yml  release.yml
.github/workflows/: ci.yml  mypy_primer.yml  mypy_primer_comment.yml  publish-pypi.yml  stubtest.yml  update_coverage.yml  update_dprint.yml  zizmor.yml
codegen/: mods.py
scipy-stubs/: __config__.pyi  __init__.pyi  _cyutility.pyi  _typing.pyi  version.pyi
scipy-stubs/_lib/: _array_api.pyi  _array_api_docs_tables.pyi  _ccallback.pyi  _ccallback_c.pyi  _disjoint_set.pyi  _docscrape.pyi  _elementwise_iterative_method.pyi  _finite_differences.pyi  _pep440.pyi  _testutils.pyi  _util.pyi  deprecation.pyi  doccer.pyi
scipy-stubs/cluster/: hierarchy.pyi  vq.pyi
scipy-stubs/constants/: _codata.pyi  _constants.pyi  codata.pyi  constants.pyi
scipy-stubs/datasets/: _fetchers.pyi  _typing.pyi  _utils.pyi
scipy-stubs/differentiate/: _differentiate.pyi
scipy-stubs/fft/: __init__.pyi  _backend.pyi  _basic.pyi  _fftlog.pyi  _helper.pyi  _realtransforms.pyi  _realtransforms_backend.pyi
scipy-stubs/fftpack/: _basic.pyi  _helper.pyi  _pseudo_diffs.pyi  _realtransforms.pyi  convolve.pyi  helper.pyi
scipy-stubs/integrate/: _bvp.pyi  _cubature.pyi  _dop.pyi  _lebedev.pyi  _ode.pyi  _odepack.pyi  _odepack_py.pyi  _quad_vec.pyi  _quadpack_py.pyi  _quadrature.pyi  _tanhsinh.pyi  _typing.pyi  _vode.pyi
scipy-stubs/interpolate/: __init__.pyi  _bary_rational.pyi  _bsplines.pyi  _cubic.pyi  _dfitpack.pyi  _dierckx.pyi  _fitpack.pyi  _fitpack2.pyi  _fitpack_impl.pyi  _fitpack_py.pyi  _fitpack_repro.pyi  _interpnd.pyi  _interpolate.pyi  _ndbspline.pyi  _ndgriddata.pyi  _polyint.pyi  _rbf.pyi  _rbfinterp.pyi  _rbfinterp_np.pyi  _rbfinterp_pythran.pyi  _rbfinterp_xp.pyi  _rgi.pyi  dfitpack.pyi  interpnd.pyi  interpolate.pyi  ndgriddata.pyi  polyint.pyi
scipy-stubs/io/: _fortran.pyi  _idl.pyi  _mmio.pyi  _netcdf.pyi  harwell_boeing.pyi  wavfile.pyi
scipy-stubs/linalg/: __init__.pyi  _basic.pyi  _batched_linalg.pyi  _cythonized_array_utils.pyi  _decomp.pyi  _decomp_cholesky.pyi  _decomp_cossin.pyi  _decomp_interpolative.pyi  _decomp_ldl.pyi  _decomp_lu.pyi  _decomp_lu_cython.pyi  _decomp_qr.pyi  _decomp_qz.pyi  _decomp_schur.pyi  _decomp_svd.pyi  _decomp_update.pyi  _expm_frechet.pyi  _matfuncs.pyi  _matfuncs_expm.pyi  _matfuncs_sqrtm.pyi  _matfuncs_sqrtm_triu.pyi  _misc.pyi  _procrustes.pyi  _sketches.pyi  _solvers.pyi  _special_matrices.pyi  _testutils.pyi  basic.pyi  blas.pyi  decomp.pyi  decomp_qr.pyi  decomp_schur.pyi  interpolative.pyi  lapack.pyi
scipy-stubs/ndimage/: _filters.pyi  _fourier.pyi  _interpolation.pyi  _measurements.pyi  _morphology.pyi  _nd_image.pyi  _ni_label.pyi  _ni_support.pyi  _typing.pyi  filters.pyi  morphology.pyi
scipy-stubs/odr/: _models.pyi  _odrpack.pyi  models.pyi  odrpack.pyi
scipy-stubs/optimize/: _basinhopping.pyi  _constraints.pyi  _dcsrch.pyi  _differentiable_functions.pyi  _differentialevolution.pyi  _direct.pyi  _direct_py.pyi  _dual_annealing.pyi  _elementwise.pyi  _group_columns.pyi  _hessian_update_strategy.pyi  _isotonic.pyi  _lbfgsb_py.pyi  _linesearch.pyi  _linprog.pyi  _milp.pyi  _minimize.pyi  _minpack.pyi  _minpack_py.pyi  _nnls.pyi  _nonlin.pyi  _numdiff.pyi  _optimize.pyi  _qap.pyi  _remove_redundancy.pyi  _root.pyi  _root_scalar.pyi  _shgo.pyi  _slsqp_py.pyi  _tnc.pyi  _trustregion.pyi  _trustregion_exact.pyi  _trustregion_krylov.pyi  _typing.pyi  _zeros_py.pyi  cobyla.pyi  lbfgsb.pyi  minpack.pyi  optimize.pyi  slsqp.pyi  (+2 more)
scipy-stubs/signal/: __init__.pyi  _arraytools.pyi  _czt.pyi  _delegators.pyi  _filter_design.pyi  _fir_filter_design.pyi  _lti_conversion.pyi  _ltisys.pyi  _max_len_seq.pyi  _max_len_seq_inner.pyi  _peak_finding.pyi  _peak_finding_utils.pyi  _savitzky_golay.pyi  _short_time_fft.pyi  _signal_api.pyi  _signaltools.pyi  _sigtools.pyi  _spectral_py.pyi  _spline.pyi  _spline_filters.pyi  _upfirdn.pyi  _upfirdn_apply.pyi  _waveforms.pyi  bsplines.pyi  filter_design.pyi  lti_conversion.pyi  ltisys.pyi  signaltools.pyi  spectral.pyi
scipy-stubs/sparse/: __init__.pyi  _base.pyi  _bsr.pyi  _compressed.pyi  _construct.pyi  _coo.pyi  _csc.pyi  _csparsetools.pyi  _csr.pyi  _data.pyi  _dia.pyi  _dok.pyi  _extract.pyi  _index.pyi  _lil.pyi  _matrix.pyi  _matrix_io.pyi  _sparsetools.pyi  _spfuncs.pyi  _sputils.pyi  _typing.pyi  base.pyi  bsr.pyi  construct.pyi  coo.pyi  csc.pyi  csr.pyi  dia.pyi  dok.pyi
scipy-stubs/spatial/: _ckdtree.pyi  _distance_pybind.pyi  _distance_wrap.pyi  _geometric_slerp.pyi  _kdtree.pyi  _plotutils.pyi  _qhull.pyi  _spherical_voronoi.pyi  _voronoi.pyi  distance.pyi
scipy-stubs/special/: __init__.pyi  _add_newdocs.pyi  _basic.pyi  _gufuncs.pyi  _lambertw.pyi  _logsumexp.pyi  _multiufuncs.pyi  _orthogonal.pyi  _special_ufuncs.pyi  _spherical_bessel.pyi  _test_internal.pyi  _testutils.pyi  _ufuncs.pyi  basic.pyi  cython_special.pyi  orthogonal.pyi  specfun.pyi
scipy-stubs/stats/: __init__.pyi  _biasedurn.pyi  _binned_statistic.pyi  _binomtest.pyi  _censored_data.pyi  _common.pyi  _continued_fraction.pyi  _continuous_distns.pyi  _correlation.pyi  _covariance.pyi  _crosstab.pyi  _distn_infrastructure.pyi  _distr_params.pyi  _distribution_infrastructure.pyi  _entropy.pyi  _fit.pyi  _hypotests.pyi  _kde.pyi  _mannwhitneyu.pyi  _mgc.pyi  _morestats.pyi  _mstats_basic.pyi  _mstats_extras.pyi  _multicomp.pyi  _multivariate.pyi  _mvn.pyi  _new_distributions.pyi  _odds_ratio.pyi  _probability_distribution.pyi  _qmc.pyi  _qmc_cy.pyi  _quantile.pyi  _relative_risk.pyi  _resampling.pyi  _sampling.pyi  _sensitivity_analysis.pyi  _stats.pyi  _stats_mstats_common.pyi  _stats_py.pyi  _stats_pythran.pyi  (+9 more)
scripts/: check_version_literals.py  generate_matrix.py  overload_count.py  scipy_usage.py  test_coverage.py  unstubbed_modules.py
tests/: .ruff.toml  README.md
tests/cluster/: test_hierarchy.pyi  test_vq.pyi
(+332 files in other folders)
