[build-system]
requires = ["uv_build>=0.11,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "scipy-stubs"
module-root = ""
source-include = [".mypyignore"] # for scipy-stubs-feedstock

[project]
name = "scipy-stubs"
version = "1.17.1.4.dev0"
description = "Type annotations for SciPy"
readme = "README.md"
authors = [
  { name = "Joren Hammudoglu", email = "jhammudoglu@gmail.com" },
]
maintainers = [
  { name = "Joren Hammudoglu", email = "jhammudoglu@gmail.com" },
  { name = "SciPy Developers", email = "scipy-dev@python.org" },
]
license = "BSD-3-Clause"
license-files = ["LICENSE"]
keywords = ["scipy", "typing", "stubs", "mypy", "pyright", "pep484", "pep561", "scipy-stubs"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Typing :: Stubs Only",
]
requires-python = ">=3.11"
dependencies = ["optype[numpy]>=0.14.0,<0.18"]

[project.optional-dependencies]
scipy = ["scipy>=1.17.1,<1.18"]

[project.urls]
Homepage = "https://scipy.org/"
Repository = "https://github.com/scipy/scipy-stubs"
Issues = "https://github.com/scipy/scipy-stubs/issues"
Changelog = "https://github.com/scipy/scipy-stubs/releases"

[dependency-groups]
extras = ["scipy-stubs[scipy]"]
ci = ["packaging>=26.0"]
lint = [
  { include-group = "extras" },
  "dprint-py==0.53.1.0",
  "ruff==0.15.8",
  "sp-repo-review[cli]==2026.3.2",
]
type = [
  { include-group = "extras" },
  { include-group = "ci" },
  "array-api-compat==1.14.0", # bundled as `_lib.array_api_compat`
  "pytest==9.0.2", # needed for `_lib._array_api.make_xp_pytest_*`
  "matplotlib==3.10.8", # needed for `spatial._plotutils` and `stats._fit.FitResult.plot`
  "basedpyright==1.38.4",
  "mypy[faster-cache]==1.20.0",
  "pyrefly==0.59.1",
  "stubdefaulter>=0.1.0",
  "ty==0.0.27",
]
dev = [
  { include-group = "lint" },
  { include-group = "type" },
]

[tool.uv.sources]
# the required stubdefaulter features not released yet (>0.1.0)
stubdefaulter = { git = "https://github.com/JelleZijlstra/stubdefaulter.git", rev = "ebe9e31" }

# poe

[tool.poe.tasks.clean]
cmd = """
rm -rf
  **/*.pyc
  **/__pycache__
  **/.cache
  **/.mypy_cache
  **/.ruff_cache
  **/.tox
"""

[tool.poe.tasks.stubtest]
cmd = """
uv run
  --no-editable
  --reinstall-package=scipy-stubs
  stubtest
  --ignore-disjoint-bases
  --allowlist=.mypyignore
  scipy
"""

[tool.poe.tasks.stubdefaulter]
cmd = "stubdefaulter --packages=. --exit-zero --check"
executor.type = "uv"

[tool.typos]
files = { extend-exclude = ["*.pyi", ".mypyignore"] }
default = { extend-ignore-identifiers-re = ['ND|Nd|Theis|TtestResult|SeQUeNCe'] }

# mypy

[tool.mypy]
strict = true
strict_equality_for_none = true
# required by repo-review
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = false
# experimental
local_partial_types = true
allow_redefinition_new = true

# pyright / basedpyright

[tool.pyright]
exclude = [
  "**/__pycache__",
  "**/.mypy_cache",
  "**/.ruff_cache",
  "**/.tox",
  "**/.venv",
]
ignore = [".venv"]
stubPath = "."
pythonPlatform = "All"
typeCheckingMode = "strict"
deprecateTypingAliases = true
enableReachabilityAnalysis = false
enableTypeIgnoreComments = false
reportCallInDefaultInitializer = true
reportImplicitOverride = true
reportImportCycles = true
reportMissingSuperCall = true
reportPropertyTypeMismatch = false
reportUninitializedInstanceVariable = true
reportUnnecessaryTypeIgnoreComment = true
reportUnusedCallResult = true

# type-checkers should type-check; linters should lint
reportImplicitStringConcatenation = false
reportPrivateImportUsage = false
reportPrivateUsage = false

# basedpyright
failOnWarnings = true
reportIgnoreCommentWithoutRule = true
reportImplicitAbstractClass = false
reportImplicitRelativeImport = true
reportInvalidCast = true
reportPrivateLocalImportUsage = true
reportUnannotatedClassAttribute = false
strictGenericNarrowing = false

[[tool.pyright.executionEnvironments]]
root = "tests"
reportInvalidStubStatement = false
reportUnusedCallResult = false
reportUnusedExpression = false

# pyrefly

[tool.pyrefly]
project-includes = ["scipy-stubs", "scripts", "tests"]
enabled-ignores = ["pyrefly"]

[tool.pyrefly.errors]
implicit-abstract-class = "error"
implicit-any = "error"
implicitly-defined-attribute = "error"
missing-override-decorator = "error"
missing-source = "ignore"
not-required-key-access = "error"
open-unpacking = "error"
unannotated-attribute = "error"
unannotated-parameter = "error"
unannotated-return = "error"
untyped-import = "error"
unused-ignore = "error"
variance-mismatch = "error"

[[tool.pyrefly.sub-config]]
matches = "scipy-stubs/*/__init__.pyi"
errors = { deprecated = "ignore" }

[[tool.pyrefly.sub-config]]
matches = "scipy-stubs/odr/*.pyi"
errors = { deprecated = "ignore" }

[[tool.pyrefly.sub-config]]
# LSP violations that won't cause type-unsafe behavior, some of which depend on numpy versions
matches = "scipy-stubs/special/_ufuncs.pyi"
errors = { bad-override = "ignore" }

[[tool.pyrefly.sub-config]]
matches = "scipy-stubs/special/orthogonal.pyi"
errors = { deprecated = "ignore" }

[[tool.pyrefly.sub-config]]
matches = "scipy-stubs/stats/_distn_infrastructure.pyi"
errors = { bad-override = "ignore" }

# ty

[tool.ty]
src = { include = ["scipy-stubs", "scripts", "tests"] }
environment = { python-platform = "all" }
terminal = { error-on-warning = true }
analysis = { respect-type-ignore-comments = false }

[tool.ty.rules]
division-by-zero = "error"
possibly-missing-import = "error"
possibly-unresolved-reference = "error"
unsupported-dynamic-base = "error"
unused-ignore-comment = "error"

[[tool.ty.overrides]]
include = [
  "scipy-stubs/*/__init__.pyi",
  "scipy-stubs/odr/*.pyi",
  "scipy-stubs/special/orthogonal.pyi",
]
rules = { deprecated = "ignore" }

[[tool.ty.overrides]]
# LSP violations that won't cause type-unsafe behavior, some of which depend on numpy versions
include = [
  "scipy-stubs/stats/_distn_infrastructure.pyi",
  "scipy-stubs/special/_ufuncs.pyi",
]
rules = { invalid-method-override = "ignore" }

# repo-review

[tool.repo-review]
ignore = [
  "PY004", # no /docs
  "PY006", # pre-commit should not be used
  "PY007", # tox configured in tox.toml
  "PP301", # pytest is irrelevant
  "PC111", # no blacken-docs because markdown has no code
  "PC170", # no pygrep-hooks because no rST
  "RTD", # no RTD
]

# ruff

[tool.ruff]
src = ["scipy-stubs", "scripts"]
extend-exclude = [".git", ".mypy_cache", ".tox", ".venv"]
force-exclude = true
# https://typing.python.org/en/latest/guides/writing_stubs.html#maximum-line-length
line-length = 130
preview = true

[tool.ruff.format]
line-ending = "lf"
skip-magic-trailing-comma = true

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "FBT", "ANN401", "COM812", "CPY", "EM", "TD", "FIX", "DOC"]

[tool.ruff.lint.per-file-ignores]
"*.pyi" = ["F", "E741", "N", "A", "PYI054", "PLC2701", "PLW3201", "PLR", "FURB"]

[tool.ruff.lint.flake8-import-conventions]
banned-from = ["numpy", "numpy.typing", "optype", "optype.numpy", "optype.typing"]

[tool.ruff.lint.flake8-import-conventions.extend-aliases]
"ctypes" = "ct"
"datetime" = "dt"
"numpy" = "np"
"numpy.typing" = "npt"
"optype" = "op"
"optype.numpy" = "onp"
"optype.numpy.compat" = "npc"
"optype.typing" = "opt"

[tool.ruff.lint.isort]
case-sensitive = true
combine-as-imports = true
extra-standard-library = ["_typeshed", "typing_extensions"]
known-local-folder = ["scipy"]
split-on-trailing-comma = false

# tox

[tool.tox]
min_version = "4"
requires = ["tox-uv>=1"]
env_list = ["lint", "ty", "pyrefly", "pyright", "mypy", "3.11", "3.12", "3.13", "3.14"]

[tool.tox.env_run_base]
description = "stubtest with {base_python}"
runner = "uv-venv-lock-runner"
dependency_groups = ["type"]
uv_sync_flags = ["--no-editable", "--reinstall-package=scipy-stubs"]
commands = [
  ["stubtest", "--ignore-disjoint-bases", "--allowlist=.mypyignore", "scipy"],
  ["stubdefaulter", "--packages=.", "--exit-zero", "--check"],
]

[tool.tox.env.lint]
description = "lint"
runner = "uv-venv-lock-runner"
dependency_groups = ["lint"]
commands = [
  ["ruff", "check", "--show-fixes"],
  ["ruff", "format", "--check"],
  ["dprint", "check", "--incremental=false"],
  ["repo-review", "--show=err", "."],
]

[tool.tox.env.ty]
description = "ty"
runner = "uv-venv-lock-runner"
dependency_groups = ["type"]
commands = [
  [
    "ty",
    "check",
    "--error-on-warning",
    "--output-format=concise",
    { replace = "posargs", default = ["scipy-stubs", "scripts"], extend = true },
  ],
]

[tool.tox.env.pyrefly]
description = "pyrefly"
runner = "uv-venv-lock-runner"
dependency_groups = ["type"]
commands = [["pyrefly", "check", { replace = "posargs", default = [], extend = true }]]

[tool.tox.env.pyright]
description = "basedpyright"
runner = "uv-venv-lock-runner"
dependency_groups = ["type"]
commands = [["basedpyright", { replace = "posargs", default = [], extend = true }]]

[tool.tox.env.mypy]
description = "mypy"
runner = "uv-venv-lock-runner"
dependency_groups = ["type"]
commands = [
  [
    "mypy",
    "--no-incremental",
    { replace = "posargs", default = ["."], extend = true },
  ],
]
